# sqlitebrowser

./: .gitignore  .gitmodules  .project  .travis.yml  BUILDING  BUILDING.md  CHANGELOG.md  CMakeLists-legacy.txt  CMakeLists.txt  CNAME  CONTRIBUTION.md  LICENSE  LICENSE-EXTENSIONS  LICENSE-MIT  LICENSE-PLUGINS  MAINTAINERS.md  README.md  README.rst  README.txt  SECURITY.md  appveyor.yml  currentrelease  data.txt  index.html  params.json  sg.brauzer  sqlb_pl.ts  sqlitebrowser.org.html  sqlitebrowser.pro  sqlitedbbrowser.pro  test.txt  ui_ImportCsvDialog.h  ui_MainWindow.h  ui_PreferencesDialog.h  ui_SqlExecutionArea.h
libs/antlr-2.7.7/: AUTHORS  CMakeLists.txt  LICENSE.txt  README  TODO  antlr.pro  doxygen.cfg
libs/antlr-2.7.7/antlr/: ANTLRException.hpp  ANTLRUtil.hpp  AST.hpp  ASTArray.hpp  ASTFactory.hpp  ASTNULLType.hpp  ASTPair.hpp  ASTRefCount.hpp  BaseAST.hpp  BitSet.hpp  CharBuffer.hpp  CharInputBuffer.hpp  CharScanner.hpp  CharStreamException.hpp  CharStreamIOException.hpp  CircularQueue.hpp  CommonAST.hpp  CommonASTWithHiddenTokens.hpp  CommonHiddenStreamToken.hpp  CommonToken.hpp  IOException.hpp  InputBuffer.hpp  LLkParser.hpp  LexerSharedInputState.hpp  MismatchedCharException.hpp  MismatchedTokenException.hpp  NoViableAltException.hpp  NoViableAltForCharException.hpp  Parser.hpp  ParserSharedInputState.hpp  RecognitionException.hpp  RefCount.hpp  SemanticException.hpp  String.hpp  Token.hpp  TokenBuffer.hpp  TokenRefCount.hpp  TokenStream.hpp  TokenStreamBasicFilter.hpp  TokenStreamException.hpp  (+10 more)
libs/antlr-2.7.7/src/: ANTLRUtil.cpp  ASTFactory.cpp  ASTNULLType.cpp  ASTRefCount.cpp  BaseAST.cpp  BitSet.cpp  CharBuffer.cpp  CharScanner.cpp  CommonAST.cpp  CommonASTWithHiddenTokens.cpp  CommonHiddenStreamToken.cpp  CommonToken.cpp  InputBuffer.cpp  LLkParser.cpp  MismatchedCharException.cpp  MismatchedTokenException.cpp  NoViableAltException.cpp  NoViableAltForCharException.cpp  Parser.cpp  RecognitionException.cpp  String.cpp  Token.cpp  TokenBuffer.cpp  TokenRefCount.cpp  TokenStreamBasicFilter.cpp  TokenStreamHiddenTokenFilter.cpp  TokenStreamRewriteEngine.cpp  TokenStreamSelector.cpp  TreeParser.cpp  dll.cpp
libs/qcustomplot/: CMakeLists.txt  changelog.txt
libs/qcustomplot-source/: CMakeLists.txt  changelog.txt  qcustomplot.cpp  qcustomplot.h  qcustomplot.pro
libs/qhexedit/: CMakeLists.txt  qhexedit.pro
libs/qhexedit/src/: chunks.cpp  chunks.h  commands.cpp  commands.h  qhexedit.cpp  qhexedit.h  qhexedit.pro  qhexedit_p.cpp  qhexedit_p.h  xbytearray.cpp  xbytearray.h
libs/qscintilla/: CMakeLists.txt  ChangeLog  LICENSE  NEWS  README
libs/qscintilla/Qt4Qt5/: CMakeLists.txt  InputMethod.cpp  ListBoxQt.cpp  ListBoxQt.h  MacPasteboardMime.cpp  PlatQt.cpp  SciAccessibility.cpp  SciAccessibility.h  SciClasses.cpp  SciClasses.h  SciNamespace.h  ScintillaQt.cpp  ScintillaQt.h  qsciabstractapis.cpp  qsciapis.cpp  qscicommand.cpp  qscicommandset.cpp  qscidocument.cpp  qscilexer.cpp  qscilexercpp.cpp  qscilexercustom.cpp  qscilexerhtml.cpp  qscilexerjavascript.cpp  qscilexerjson.cpp  qscilexerpython.cpp  qscilexersql.cpp  qscilexerxml.cpp  qscimacro.cpp  qscintilla.pro  qscintilla_cs.qm  qscintilla_cs.ts  qscintilla_de.qm  qscintilla_de.ts  qscintilla_es.qm  qscintilla_es.ts  qscintilla_fr.qm  qscintilla_fr.ts  qscintilla_pt_br.qm  qscintilla_pt_br.ts  qsciprinter.cpp  (+4 more)
libs/qscintilla/Qt4Qt5/Qsci/: qsciabstractapis.h  qsciapis.h  qscicommand.h  qscicommandset.h  qscidocument.h  qsciglobal.h  qscilexer.h  qscilexercpp.h  qscilexercustom.h  qscilexerhtml.h  qscilexerjavascript.h  qscilexerjson.h  qscilexerpython.h  qscilexersql.h  qscilexerxml.h  qscimacro.h  qsciprinter.h  qsciscintilla.h  qsciscintillabase.h  qscistyle.h  qscistyledtext.h
libs/qscintilla/Qt4Qt5/features/: qscintilla2.prf
libs/qscintilla/include/: ILexer.h  Platform.h  SciLexer.h  Scintilla.h  Scintilla.iface  ScintillaWidget.h
libs/qscintilla/lexers/: LexHTML.cpp  LexJSON.cpp  LexSQL.cpp
libs/qscintilla/lexlib/: Accessor.cpp  Accessor.h  CharacterCategory.cpp  CharacterSet.cpp  CharacterSet.h  DefaultLexer.h  LexAccessor.h  LexerBase.cpp  LexerBase.h  LexerModule.cpp  LexerModule.h  LexerNoExceptions.cpp  LexerNoExceptions.h  LexerSimple.cpp  LexerSimple.h  PropSetSimple.cpp  PropSetSimple.h  SparseState.h  StyleContext.cpp  StyleContext.h  SubStyles.h  WordList.cpp  WordList.h
libs/qscintilla/scintilla/include/: Platform.h  SciLexer.h  (+1 more)
libs/qscintilla/src/: AutoComplete.cpp  AutoComplete.h  CMakeLists.txt  CallTip.cpp  CallTip.h  CaseConvert.cpp  CaseConvert.h  CaseFolder.cpp  Catalogue.cpp  CellBuffer.cpp  CellBuffer.h  CharClassify.cpp  CharClassify.h  ContractionState.cpp  ContractionState.h  Decoration.cpp  Decoration.h  Document.cpp  Document.h  EditModel.cpp  EditModel.h  EditView.cpp  EditView.h  Editor.cpp  Editor.h  ExternalLexer.cpp  ExternalLexer.h  FontQuality.h  Indicator.cpp  Indicator.h  InputMethod.cpp  KeyMap.cpp  KeyMap.h  LineMarker.cpp  LineMarker.h  ListBoxQt.cpp  ListBoxQt.h  MacPasteboardMime.cpp  MarginView.cpp  Partitioning.h  (+90 more)
libs/qscintilla_2.14.1/Qt5Qt6/: CMakeLists.txt  SciAccessibility.h  ScintillaQt.cpp  qsciapis.cpp  qscicommand.cpp  qscicommandset.cpp  qscilexer.cpp  qscilexerasm.cpp  qscilexeravs.cpp  qscilexerbash.cpp  qscilexerbatch.cpp  qscilexercmake.cpp  qscilexercoffeescript.cpp  qscilexercpp.cpp  qscilexercsharp.cpp  qscilexercss.cpp  qscilexercustom.cpp  qscilexerd.cpp  qscilexerdiff.cpp  qscilexeredifact.cpp  qscilexerfortran.cpp  qscilexerfortran77.cpp  qscilexerhex.cpp  qscilexeridl.cpp  qscilexerintelhex.cpp  qscilexerjava.cpp  qscilexerjavascript.cpp  qscilexerjson.cpp  qscilexerlua.cpp  qscilexermakefile.cpp  qscilexermarkdown.cpp  qscilexermasm.cpp  qscilexermatlab.cpp  qscilexernasm.cpp  qscilexeroctave.cpp  qscilexerpascal.cpp  qscilexerperl.cpp  qscilexerpo.cpp  qscilexerpostscript.cpp  qscilexerpov.cpp  (+19 more)
src/tests/: CMakeLists.txt  TestImport.cpp  TestImport.h  TestMain.cpp  TestRegex.cpp  TestRegex.h  TestRowCache.cpp  TestRowCache.h  test_row_cache.cpp  testsqlobjects.cpp  testsqlobjects.h
tests/: CMakeLists.txt  createtestdb.py
(+865 files in other folders)
